[tool.poetry]
name = "databricks-labs-pytester"
version = "0.0.1"
description = "Python Testing for Databricks"
authors = ["Serge Smertin <serge.smertin@databricks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
databricks-sdk = "^0.7.0"
pytest = "^7.4.0"

[tool.poetry.plugins.pytest11]
databricks-labs-pytester = "databricks.labs.pytester.fixtures.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

